# GHSCarnival

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routers/: admin.py  public.py
backend/app/db/: prisma.py
backend/prisma/: schema.prisma
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/pages/: AboutPage.tsx  ComingSoonPage.tsx  GuidelinesPage.tsx  HostelBlocksPage.tsx  LandingPage.tsx  LiveScoresPage.tsx  TeamsPage.tsx
frontend/src/pages/admin/: AdminDashboardPage.tsx  AdminLoginPage.tsx
frontend/src/routes/: App.tsx
